# 68hub

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README_en.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.mjs
.github/workflows/: release.yml
assets/readme/: content1.txt  header.html
cola/: README.md
cola/backend/: pyproject.toml  run.py
cola/backend/app/: analytics.py  bootstrap.py  config.py  db.py  main.py  ollama_quota.py  opencode_usage.py  quota.py  schemas.py  sync_progress.py  usage_sync.py
cola/backend/tests/: conftest.py  test_analytics.py  test_api_config.py  test_api_quota.py  test_db.py  test_ollama_quota.py  test_quota.py  test_usage_sync.py
electron/: main.ts  preload.ts  tsconfig.json
electron/backend/: analytics.ts  bootstrap.ts  config.ts  db.ts  ollama-quota.ts  opencode-usage.ts  quota.ts  routes.ts  server.ts  sync-progress.ts  usage-sync.ts
scripts/: build-backend.bat  generate-icon.mjs
src/: App.tsx  index.css  main.tsx
src/api/: client.ts  types.ts
src/components/: DailyChart.tsx  DailyModelChart.tsx  Layout.tsx  Loading.tsx  ModelIcon.tsx  ModelRankChart.tsx  OnboardingDialog.tsx  QuotaCard.tsx  Sidebar.tsx  StatCard.tsx  SyncProgress.tsx  ThemeProvider.tsx  TitleBar.tsx  Toast.tsx  UsageTable.tsx
src/hooks/: usePolling.ts
src/i18n/: i18n.ts
src/i18n/locales/: en.json  zh.json
src/pages/: About.tsx  DailyTrends.tsx  Dashboard.tsx  Settings.tsx  TokenStats.tsx  UsageRecords.tsx
src/types/: electron.d.ts
