[project]
name = "68backend"
version = "0.2.0"
description = "68HUB — OpenCode Go 用量统计后端"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "uvicorn[standard]>=0.34.0",
]

[project.scripts]
68backend = "app.main:run"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
